[lworld] TestBasicFunctionality::test12 fails due to invalid field values after deoptimization

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      TestBasicFunctionality::test12 fails due to invalid field values after deoptimization

       stderr: [Exception in thread "main" java.lang.reflect.InvocationTargetException
      at jdk.internal.reflect.GeneratedMethodAccessor36.invoke(Unknown Source)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:565)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:681)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:397)
      at compiler.valhalla.valuetypes.TestBasicFunctionality.main(TestBasicFunctionality.java:53)
      Caused by: java.lang.RuntimeException: assertEquals: expected 24378 to equal 27528
      at jdk.test.lib.Asserts.fail(Asserts.java:594)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:189)
      at jdk.test.lib.Asserts.assertEQ(Asserts.java:166)
      at compiler.valhalla.valuetypes.TestBasicFunctionality.test12_verifier(TestBasicFunctionality.java:282)
      ... 6 more

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: