8233124: [lworld] TestBasicFunctionality::test12 fails due to invalid field values after deoptimization